[project]
name = "fastapi-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "duckdb-engine>=0.17.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "sqlmodel>=0.0.24",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
]
